@@ -9,6 +9,7 @@ Version 0.5.0~dev
 	  streams.
 	* Added basic support for shoutcast metadata relaying.
 	* Added client buffer queue sizes statistics to JSON status.
+	* httpkiller: add --random-path option.
 
 Version 0.4.0 Released on 2011/11/22
 
